--- a/config.env
+++ b/config.env
@@ -1,5 +1,6 @@
 NODE_ENV=development
 PORT=4000
-DATABASE=mongodb+srv://jonas:<PASSWORD>@cluster0-pwikv.mongodb.net/natours?retryWrites=true
+#DATABASE=mongodb+srv://jonas:<PASSWORD>@cluster0-pwikv.mongodb.net/MongoStore?retryWrites=true
+DATABASE=mongodb+srv://ahmed:<PASSWORD>@cluster0.baxiwlx.mongodb.net/MongoStore?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
-DATABASE_PASSWORD=On0adDgBCE5ECWh6
+DATABASE_PASSWORD=eoeFAeOKrrc3TL1F
